# slick-tune

./: .coveragerc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mypy.ini  pyproject.toml  pytest.ini  ruff.toml  tox.ini
.cursor/rules/: library-standards.mdc  named-arguments.mdc  pr-description.mdc  testing.mdc
.github/: PULL_REQUEST_TEMPLATE.md  codecov.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  improve_documentation.yml
.github/workflows/: cd.yml  ci.yml
docs/: conf.py  index.rst
docs/_static/css/: custom.css
docs/_static/js/: custom.js
docs/pages/: api.rst  citation.md  code_of_conduct.md  contact_us.md  contributing.md  fine_tuning_guide.md  installation.md  license.md  quick_start.md
examples/: run_dpo_lora.py  run_grpo_lora.py  run_kto_lora.py  run_sft_adalora.py  run_sft_dora.py  run_sft_full.py  run_sft_lora.py  run_sft_qlora.py
examples/data/: about_amir.eval.jsonl  about_amir.grpo.jsonl  about_amir.jsonl  about_amir.kto.jsonl  about_amir.prefs.jsonl
src/slicktune/: __init__.py  callbacks.py  rewards.py  tuner.py  types.py
src/slicktune/cli/: __init__.py  main.py
src/slicktune/data/: __init__.py
src/slicktune/eval/: __init__.py
src/slicktune/metrics/: __init__.py
src/slicktune/models/: __init__.py
src/slicktune/objectives/: __init__.py
src/slicktune/recipes/: __init__.py  probe.py
src/slicktune/strategies/: __init__.py
tests/: test_cli.py  test_data.py  test_eval.py  test_metrics.py  test_models.py  test_objectives.py  test_probe.py  test_rewards.py  test_strategies.py  test_tuner.py
