[project]
name = "slicktune"
version = "0.3.0"
description = "SlickML fine-tuning toolkit: composable strategies, objectives, and metrics for LLMs"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Amirhessam Tahmassebi", email = "admin@slickml.com" },
]
requires-python = ">=3.10,<3.14"
keywords = [
    "llm",
    "fine-tuning",
    "peft",
    "lora",
    "qlora",
    "sft",
    "machine-learning",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "torch>=2.2",
    "transformers>=4.44",
    "peft>=0.12",
    "trl>=0.12",
    "datasets>=3.0",
    "accelerate>=0.34",
    "sentencepiece>=0.2",
    "click>=8.1",
    "rich>=13.0",
]

[project.optional-dependencies]
qlora = ["bitsandbytes>=0.43"]
dev = [
    "assertpy>=1.1",
    "mypy>=2.3.0",
    "poethepoet>=0.32",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "tox>=4.22",
    "tox-uv>=1.25",
]
docs = [
    "sphinx>=5.3",
    "sphinx-autoapi>=1.9",
    "sphinx-design>=0.3",
    "myst-parser>=0.18",
    "furo>=2022.9",
    "sphinxcontrib-mermaid>=0.9",
]

[project.scripts]
slicktune = "slicktune.cli.main:cli"

[project.urls]
Homepage = "https://www.slickml.com"
Repository = "https://github.com/slickml/slick-tune"
Documentation = "https://github.com/slickml/slick-tune/tree/master/docs"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/slicktune"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/assets",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]
exclude = ["/.gitignore"]

[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = [
    "assertpy>=1.1",
    "mypy>=2.3.0",
    "poethepoet>=0.32",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "tox>=4.22",
    "tox-uv>=1.25",
]
docs = [
    "sphinx>=5.3",
    "sphinx-autoapi>=1.9",
    "sphinx-design>=0.3",
    "myst-parser>=0.18",
    "furo>=2022.9",
    "sphinxcontrib-mermaid>=0.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "gpu: tests that require a CUDA GPU",
    "slow: end-to-end training smoke tests",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests", "examples"]
extend-exclude = ["outputs", ".venv"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "ANN", # type annotations (ruff typechecking)
]
ignore = [
    "ANN401", # Allow Any where interop with HF/PEFT requires it
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN"]
"examples/**/*.py" = ["ANN"]

[tool.ruff.lint.isort]
known-first-party = ["slicktune"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true

# -- try `poe --help` for options
[tool.poe.tasks]

[tool.poe.tasks.train-lora]
help = "Smoke-train LoRA SFT on the personal about-me dataset"
cmd = "python examples/run_sft_lora.py"

[tool.poe.tasks.train-dpo]
help = "Smoke-train LoRA DPO on about-me preference pairs"
cmd = "python examples/run_dpo_lora.py"

[tool.poe.tasks.train-kto]
help = "Smoke-train LoRA KTO on about-me unpaired preference labels"
cmd = "python examples/run_kto_lora.py"

[tool.poe.tasks.probe-lora]
help = "Probe the saved LoRA checkpoint against about-me probes"
cmd = """
    slicktune probe
        --model-dir outputs/sft_lora
        --probes examples/data/about_amir.probes.jsonl
    """

[tool.poe.tasks.eval-lora]
help = "Holdout PPL + probe judge on the saved LoRA checkpoint"
cmd = """
    slicktune eval
        --model-dir outputs/sft_lora
        --eval-data examples/data/about_amir.eval.jsonl
        --probes examples/data/about_amir.probes.jsonl
        --judge substring
    """

[tool.poe.tasks.greet]
help = "Runtime user greetings"
cmd = """
echo "Welcome to slick-tune ♡♡♡ $USER ♡♡♡ ...\n\n\
███████╗██╗     ██╗ ██████╗██╗  ██╗████████╗██╗   ██╗███╗   ██╗███████╗
██╔════╝██║     ██║██╔════╝██║ ██╔╝╚══██╔══╝██║   ██║████╗  ██║██╔════╝
███████╗██║     ██║██║     █████╔╝    ██║   ██║   ██║██╔██╗ ██║█████╗
╚════██║██║     ██║██║     ██╔═██╗    ██║   ██║   ██║██║╚██╗██║██╔══╝
███████║███████╗██║╚██████╗██║  ██╗   ██║   ╚██████╔╝██║ ╚████║███████╗
╚══════╝╚══════╝╚═╝ ╚═════╝╚═╝  ╚═╝   ╚═╝    ╚═════╝ ╚═╝  ╚═══╝╚══════╝\
" """

[tool.poe.tasks.clean]
help = "Remove ignored caches, coverage, build artifacts, and training outputs"
cmd = """
    rm -rf .coverage
           .coverage.*
           dist/
           build/
           outputs/
           .mypy_cache/
           .pytest_cache/
           .ruff_cache/
           .tox/
           htmlcov/
           xmlcov/
           **/__pycache__/
           **/.ipynb_checkpoints/
    """

[tool.poe.tasks.mypy]
help = "Lint types via mypy"
cmd = "mypy"

[tool.poe.tasks.sphinx]
help = "Build API docs via sphinx"
cmd = "sphinx-build -b html docs/ docs/_build"

[tool.poe.tasks.format]
help = "Format code via ruff"
cmd = "ruff format ."

[tool.poe.tasks.check]
help = "Check all linting steps."
sequence = [
    "greet",
    { cmd = "poe format --check" },
    { cmd = "ruff check ." },
    { cmd = "poe mypy" },
]

[tool.poe.tasks.test]
help = "Run unit-tests via pytest"
cmd = """
    python -m pytest
        --cov=slicktune
        --cov-report=term-missing
        --cov-report=html
        --cov-report=xml
        --cov-config=.coveragerc
        --tb=short
        -ra
        -v
    """

[tool.poe.tasks.tox]
help = "Run check + test + build across Python versions via tox"
cmd = "tox"

[tool.poe.tasks.build]
help = "Build sdist and wheel via uv"
cmd = "uv build"
